CHANGES.txt for Tux Paint

Tux Paint - A simple drawing program for children.

Copyright (c) 2002-2021
Various contributors (see below, and AUTHORS.txt)
http://www.tuxpaint.org/

$Id$

2021.January.10 (0.9.26)
  * New Magic Tools:
    ----------------
    * Pixels
      Draws large squares, for classic computer 'pixel art' style drawings.

    * Clone
      Clones (copies, via painting) part of a drawing to another position.

  * Documentation updates
    ---------------------
    * Expanded the steps for making and posting releases.

    * Mended some broken relative links in README.html that
      pointed to other parts of the docs.

    * Documented how to build Tux Paint using old macOS
      Mark K. Kim <markuskimius@gmail.com>

2020.December.27 (0.9.25)
  * New Features
    ------------
    * Export drawings:
      * GIF export option from the Open -> Slideshow dialog.
        (Closes https://sourceforge.net/p/tuxpaint/feature-requests/191/)
        * Utilizes "gifenc", public domain by Marcel Rodrigues:
          https://github.com/lecram/gifenc
        * Depends on "libimagequant", from the "pngquant2" project:
          https://github.com/ImageOptim/libimagequant
          (GPL v3 or later, for Free/Libre Open Source Software)
          (h/t TOYAMA Shin-ichi for adding support for versions < 2.8.0)
      * Single image (PNG) export from the Open dialog.
        (Closes https://sourceforge.net/p/tuxpaint/feature-requests/192/)
      * Both utilize XDG user dirs settings, if available, to determine
        where to store them, or "~/Pictures", otherwise.  In those cases,
        files are stored in a new "TuxPaint" subdirectory.
      * The "--exportdir" option can be used to override the default
        location (but a "TuxPaint" subdir. will NOT be placed there).

    * Shape controls:
      * Draw shapes from the center (as in previous versions of Tux Paint)
        or from a corner (similar to the default mode of most other
        graphics tools).