@@ -35,7 +35,7 @@
       </p>
 
       <p>
-        June 14, 2002 - January 6, 2021
+        June 14, 2002 - January 13, 2021
       </p>
     </center>
 
