@@ -1,7 +1,7 @@
 /*
   get_fname.h
 
-  Copyright (c) 2009 - July 25, 2020
+  Copyright (c) 2009 - January 13, 2021
   http://www.tuxpaint.org/
 
   This program is free software; you can redistribute it and/or modify
@@ -34,7 +34,8 @@ enum
   /* (See get_fname.c for details) */
   DIR_SAVE,
   DIR_DATA,
-  DIR_EXPORT
+  DIR_EXPORT,
+  DIR_EXPORT_PARENT
 };
 
 char *get_fname(const char *const name, int kind);
